2016-04-04  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check for runloop integration hooks in libdispatch
	* configure
	* Headers/GNUstepBase/config.h.in
	* SSL/config.h.in
	* SSL/configure:
	Regenerate
	* Source/NSRunLoop.m: If available, monitor the file descriptor for
	the libdispatch main queue and drain it when it becomes readable.
	* Tests/base/NSRunLoop/dispatch.m
	* Tests/base/NSRunLoop/GNUmakefile.preamble:
	Tests for libdispatch runloop integration

2016-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObject.h:
	* Headers/GNUstepBase/GNUstep.h:
	* Headers/GNUstepBase/GSConfig.h.in:
	* Headers/GNUstepBase/GSIArray.h:
	* Headers/GNUstepBase/GSIMap.h:
	* Source/Additions/GCDictionary.m:
	* Source/Additions/GSLock.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/Additions/Unicode.m:
	* Source/GSArray.m:
	* Source/GSAttributedString.m:
	* Source/GSConcreteValueTemplate.m:
	* Source/GSCountedSet.m:
	* Source/GSDictionary.m:
	* Source/GSHTTPAuthentication.m:
	* Source/GSRunLoopCtxt.h:
	* Source/GSSet.m:
	* Source/GSString.m:
	* Source/NSArchiver.m:
	* Source/NSArray.m:
	* Source/NSAutoreleasePool.m:
	* Source/NSCalendar.m:
	* Source/NSConcreteHashTable.m:
	* Source/NSConcreteMapTable.m:
	* Source/NSConcretePointerFunctions.h:
	* Source/NSConcretePointerFunctions.m:
	* Source/NSConnection.m:
	* Source/NSCountedSet.m:
	* Source/NSData.m:
	* Source/NSDebug.m:
	* Source/NSDictionary.m:
	* Source/NSDistributedNotificationCenter.m:
	* Source/NSFileManager.m:
	* Source/NSGarbageCollector.m:
	* Source/NSHashTable.m:
	* Source/NSIndexSet.m:
	* Source/NSKeyValueObserving.m:
	* Source/NSKeyedArchiver.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSMapTable.m:
	* Source/NSMessagePort.m:
	* Source/NSNotificationCenter.m:
	* Source/NSNotificationQueue.m:
	* Source/NSObject.m:
	* Source/NSPointerArray.m:
	* Source/NSPortCoder.m:
	* Source/NSProxy.m:
	* Source/NSRunLoop.m:
	* Source/NSSerializer.m: